--- a/BookShopManagement/BookShopManagement/BookShopManagement.csproj
+++ b/BookShopManagement/BookShopManagement/BookShopManagement.csproj
@@ -204,11 +204,23 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControls\UC_PersonalSetting.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\UC_PersonalSetting.Designer.cs">
+      <DependentUpon>UC_PersonalSetting.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\UC_Home.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UserControls\UC_Home.Designer.cs">
       <DependentUpon>UC_Home.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\UC_Login.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\UC_Login.Designer.cs">
+      <DependentUpon>UC_Login.cs</DependentUpon>
     </Compile>
     <Compile Include="UserControls\UC_ManageExpense.cs">
       <SubType>UserControl</SubType>
@@ -233,6 +245,12 @@
     </Compile>
     <Compile Include="UserControls\UC_PurchaseDetails.Designer.cs">
       <DependentUpon>UC_PurchaseDetails.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\UC_Register.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\UC_Register.Designer.cs">
+      <DependentUpon>UC_Register.cs</DependentUpon>
     </Compile>
     <Compile Include="UserControls\UC_Sales.cs">
       <SubType>UserControl</SubType>
@@ -277,8 +295,14 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UserControls\UC_PersonalSetting.resx">
+      <DependentUpon>UC_PersonalSetting.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControls\UC_Home.resx">
       <DependentUpon>UC_Home.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\UC_Login.resx">
+      <DependentUpon>UC_Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControls\UC_ManageExpense.resx">
       <DependentUpon>UC_ManageExpense.cs</DependentUpon>
@@ -291,6 +315,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UserControls\UC_PurchaseDetails.resx">
       <DependentUpon>UC_PurchaseDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\UC_Register.resx">
+      <DependentUpon>UC_Register.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControls\UC_Sales.resx">
       <DependentUpon>UC_Sales.cs</DependentUpon>
