--- a/BookShopManagement/BookShopManagement/BookShopManagement.csproj
+++ b/BookShopManagement/BookShopManagement/BookShopManagement.csproj
@@ -202,8 +202,21 @@
     <Compile Include="Forms\Form_FinishOrder.Designer.cs">
       <DependentUpon>Form_FinishOrder.cs</DependentUpon>
     </Compile>
+    <Compile Include="Function\RegisterSession.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControls\Register\UC_RegisterPhase2.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\Register\UC_RegisterPhase2.Designer.cs">
+      <DependentUpon>UC_RegisterPhase2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Register\UC_RegisterPhase3.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\Register\UC_RegisterPhase3.Designer.cs">
+      <DependentUpon>UC_RegisterPhase3.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\UC_PersonalSetting.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -246,10 +259,10 @@
     <Compile Include="UserControls\UC_PurchaseDetails.Designer.cs">
       <DependentUpon>UC_PurchaseDetails.cs</DependentUpon>
     </Compile>
-    <Compile Include="UserControls\UC_Register.cs">
+    <Compile Include="UserControls\Register\UC_Register.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UserControls\UC_Register.Designer.cs">
+    <Compile Include="UserControls\Register\UC_Register.Designer.cs">
       <DependentUpon>UC_Register.cs</DependentUpon>
     </Compile>
     <Compile Include="UserControls\UC_Sales.cs">
@@ -295,6 +308,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UserControls\Register\UC_RegisterPhase2.resx">
+      <DependentUpon>UC_RegisterPhase2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\Register\UC_RegisterPhase3.resx">
+      <DependentUpon>UC_RegisterPhase3.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControls\UC_PersonalSetting.resx">
       <DependentUpon>UC_PersonalSetting.cs</DependentUpon>
     </EmbeddedResource>
@@ -316,7 +335,7 @@
     <EmbeddedResource Include="UserControls\UC_PurchaseDetails.resx">
       <DependentUpon>UC_PurchaseDetails.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UserControls\UC_Register.resx">
+    <EmbeddedResource Include="UserControls\Register\UC_Register.resx">
       <DependentUpon>UC_Register.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControls\UC_Sales.resx">
