--- a/BookShopManagement/BookShopManagement/BookShopManagement.csproj
+++ b/BookShopManagement/BookShopManagement/BookShopManagement.csproj
@@ -214,6 +214,18 @@
     <Compile Include="Function\RegisterSession.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControls\Register\UC_RegisterPhase2.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\Register\UC_RegisterPhase2.Designer.cs">
+      <DependentUpon>UC_RegisterPhase2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Register\UC_RegisterPhase3.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\Register\UC_RegisterPhase3.Designer.cs">
+      <DependentUpon>UC_RegisterPhase3.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\UC_AddBook.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -323,6 +335,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UserControls\Register\UC_RegisterPhase2.resx">
+      <DependentUpon>UC_RegisterPhase2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\Register\UC_RegisterPhase3.resx">
+      <DependentUpon>UC_RegisterPhase3.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControls\UC_AddBook.resx">
       <DependentUpon>UC_AddBook.cs</DependentUpon>
     </EmbeddedResource>
